update the readme

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,11 +18,11 @@ com.rdap.odf.google.scope=email%20profile%20openid
 com.rdap.odf.google.grantType=http://oauth.net/grant_type/device/1.0
 
 # fill in your client id and secret 
-com.rdap.odf.google.clientId=${google.client.id}
-com.rdap.odf.google.clientSecret=${google.client.secret}
+com.rdap.odf.google.clientId=${google_client_id}
+com.rdap.odf.google.clientSecret=${google_client_secret}
 
 # rdap service endpoint, e.g., https://rdap.verisignlabs.com/rdap/v1
-com.rdap.odf.rdapBaseUrl=${rdap.url}
+com.rdap.odf.rdapBaseUrl=${rdap_url}
 
 # batch query path segments
 com.rdap.odf.batch.auth=/domain/abc.cc,/domains?name=ab*.cc,/domains?nsLdhName=k4*,/domains?nsIp=69.*,/nameserver/k4.nstld.com,/entity/50000101-vrsn,/entities?fn=t*-vrsn,/entities?handle=5000*-vrsn
